[gd_scene load_steps=9 format=3 uid="uid://cauq13tuo6oxl"]

[ext_resource type="Script" uid="uid://dil2auak46wka" path="res://scripts/speed_control.gd" id="1_x887w"]
[ext_resource type="StyleBox" uid="uid://sfo7ou64hfqg" path="res://assets/button/button_flat_chracter.tres" id="2_8dsxo"]
[ext_resource type="Texture2D" uid="uid://b2rk4r1qruff5" path="res://assets/carriage.png" id="3_4krgi"]
[ext_resource type="PackedScene" uid="uid://c8cv3rllm0im6" path="res://scripts/resources/classes/character_ui_slot.tscn" id="4_kum5s"]
[ext_resource type="Resource" uid="uid://cqi7vndfvlt5p" path="res://scripts/resources/character/character1.tres" id="5_p61ve"]
[ext_resource type="Resource" uid="uid://by4bqg48npfkl" path="res://scripts/resources/character/character2.tres" id="6_dbapf"]
[ext_resource type="Resource" uid="uid://dqqrcafu0d8hl" path="res://scripts/resources/character/character3.tres" id="7_2vxwe"]
[ext_resource type="Resource" uid="uid://cdj01p03lwuuc" path="res://scripts/resources/character/character4.tres" id="8_b6yu3"]

[node name="WagonContextMenu" type="ColorRect"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 544.0
offset_right = 1104.0
offset_bottom = 632.0
text = "Return"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -40.0
offset_top = 8.0
offset_bottom = 48.0
script = ExtResource("1_x887w")

[node name="Steady" type="Button" parent="Control"]
layout_mode = 0
offset_left = 520.0
offset_top = 440.0
offset_right = 672.0
offset_bottom = 472.0
theme_override_styles/normal = ExtResource("2_8dsxo")
text = "Steady"

[node name="Strenuous" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 520.0
offset_top = 400.0
offset_right = 672.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("2_8dsxo")
text = "Strenuous"

[node name="Grueling" type="Button" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 520.0
offset_top = 360.0
offset_right = 672.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = ExtResource("2_8dsxo")
text = "Grueling"

[node name="Slow" type="Button" parent="Control"]
layout_mode = 0
offset_left = 520.0
offset_top = 480.0
offset_right = 672.0
offset_bottom = 512.0
theme_override_styles/normal = ExtResource("2_8dsxo")
text = "Slow"

[node name="Stop" type="Button" parent="Control"]
layout_mode = 0
offset_left = 520.0
offset_top = 520.0
offset_right = 672.0
offset_bottom = 552.0
theme_override_styles/normal = ExtResource("2_8dsxo")
text = "Stop"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 40.0
offset_right = 912.0
offset_bottom = 312.0

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(344, 160)
scale = Vector2(4.45833, 5.25)
texture = ExtResource("3_4krgi")

[node name="CharacterUISlot" parent="." instance=ExtResource("4_kum5s")]
process_priority = -1
layout_mode = 0
offset_left = 696.0
offset_top = 336.0
offset_right = 880.0
offset_bottom = 400.0
character = ExtResource("5_p61ve")

[node name="CharacterUISlot2" parent="." instance=ExtResource("4_kum5s")]
process_priority = -1
layout_mode = 0
offset_left = 928.0
offset_top = 337.0
offset_right = 1112.0
offset_bottom = 401.0
character = ExtResource("6_dbapf")

[node name="CharacterUISlot3" parent="." instance=ExtResource("4_kum5s")]
process_priority = -1
layout_mode = 0
offset_left = 696.0
offset_top = 457.0
offset_right = 880.0
offset_bottom = 521.0
character = ExtResource("7_2vxwe")

[node name="CharacterUISlot4" parent="." instance=ExtResource("4_kum5s")]
process_priority = -1
layout_mode = 0
offset_left = 928.0
offset_top = 457.0
offset_right = 1112.0
offset_bottom = 521.0
character = ExtResource("8_b6yu3")

[connection signal="pressed" from="Button" to="Control" method="_on_button_pressed"]
[connection signal="pressed" from="Control/Steady" to="Control" method="_on_steady_pressed"]
[connection signal="pressed" from="Control/Strenuous" to="Control" method="_on_strenuous_pressed"]
[connection signal="pressed" from="Control/Grueling" to="Control" method="_on_grueling_pressed"]
[connection signal="pressed" from="Control/Slow" to="Control" method="_on_slow_pressed"]
[connection signal="pressed" from="Control/Stop" to="Control" method="_on_stop_pressed"]
